git-svn-id: http://svn.concord.org/svn/projects/trunk/common/java/simulations/Energy3D@25563 6e01202a-0783-4428-890a-84243c50cc2b